hphp/test/slow/readonly/elem_cow_unset.php.expectf
Fatal error: Uncaught exception 'ReadonlyViolationException' with message 'Readonly collections cannot be modified.' in %s/elem_cow_unset.php:24
%A
